src/main/java/com/example/jokerexamples/dataflow/bad/service/TelegBot.java
package com.example.jokerexamples.dataflow.bad.service;

import org.springframework.stereotype.Service;

import javax.annotation.PostConstruct;

@Service
public class TelegramBot {

    @PostConstruct
    public void init(){
        
    }
}
